# kt_data

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  STAGE2_DESIGN.md  pyproject.toml
docs/: presentation.md  수정_수리과학연구소_규격서_1215.xlsx
notebooks/: age_70plus_mobility_check.ipynb  age_validation_2023_01.ipynb  avgdist_unit_validation.ipynb  heatmap_2023_hourly.ipynb  integrated_eda.ipynb  movement_2023_01_exploration.ipynb
scripts/: build_sudogwon_mapping.py  livepop_full.py  livepop_full_age5.py  livepop_pilot.py  livepop_sanity.py  merge_mois_population.py  movement_full.py  movement_pilot.py  verify_shapefiles.py
src/data/: load_contact.py  load_ili.py  load_mobility.py  load_population.py
src/kt_data/: __init__.py
src/kt_data/data/: __init__.py  load_calendar.py  load_contact.py  load_employment.py  load_hira.py  load_ili.py  load_mobility.py  load_population.py
tests/: test_load_calendar.py  test_load_contact.py  test_load_employment.py  test_load_hira.py  test_load_ili.py  test_load_mobility.py  test_load_population.py
