[project]
name = "kt-data"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
