[project]
name = "kt-data"
version = "0.1.0"
description = "KT mobility + NIMS contact + ILI loaders for epidemic modeling (Sudogwon)"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kt_data"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
